--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,11 +1,11 @@
 blank_issues_enabled: false
 contact_links:
-  - name: Ask a question
+  - name: Ask a Question
     url: https://github.com/ahweat-sean/package-generator/discussions/new?category=q-a
     about: Ask the community for help
-  - name: Request a feature
+  - name: Request a Feature
     url: https://github.com/ahweat-sean/package-generator/discussions/new?category=ideas
     about: Share ideas for new features
-  - name: Report a security issue
+  - name: Report a Security Issue
     url: https://github.com/ahweat-sean/package-generator/security/policy
     about: Learn how to notify us for sensitive bugs
